# RobotSystemDesign

./: .gitignore
src/: serverImg.py  serverImgFinal.py  serverImgOLCV2.py  serverImg_OLD.py
src/light_tower/: CMakeLists.txt  package.xml
src/light_tower/scripts/: light_tower.py
src/main_control/: CMakeLists.txt  package.xml
src/main_control/scripts/: main_control.py  notification.py
src/mir_robot/: CMakeLists.txt  package-lock.json  package.json  package.xml
src/mir_robot/scripts/: mirRobot.js
src/order_msgs/: CMakeLists.txt  package.xml
src/order_msgs/msg/: OrderStatus.msg
src/order_msgs/srv/: CompleteOrder.srv  NewOrder.srv
src/order_system/: CMakeLists.txt  package-lock.json  package.json  package.xml
src/order_system/scripts/: orderSystem.js  talker.js
src/packml_ros/: CMakeLists.txt  package.xml
src/packml_ros/include/packml_ros/: packml_ros.h
src/packml_ros/launch/: wholeSystem.launch
src/packml_ros/src/: packml_ros.cpp  packml_ros_node.cpp
src/packml_sm/include/packml_sm/: abstract_state_machine.h
src/packml_sm/include/packml_sm/boost/: packml_state_machine.h  packml_transitions_continuous.h
src/packml_sm/src/boost/: packml_state_machine.cpp
src/packml_sm/src/ros/: dlog.cpp
src/pymodbus_client/: CMakeLists.txt  package.xml
src/pymodbus_client/msg/: feeder_msg.msg
src/pymodbus_client/src/: client_ros.py  client_ros_srv.py  mir_check.py  modbus_client.py  test.py
src/pymodbus_client/srv/: feeder_srv.srv  mir_check.srv
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: RobotCmd.msg  RobotIO.msg  RobotStatus.msg
src/robot_msgs/srv/: RobotCommand.srv
src/ur_robot/: CMakeLists.txt  package.xml
src/ur_robot/src/: main.cpp
src/user_interface/: CMakeLists.txt  package-lock.json  package.json  package.xml
src/user_interface/scripts/: server.js
src/user_interface/scripts/public/: index.html  main.css  script.js  svg_packml.js
src/vision_ros/: CMakeLists.txt  package.xml
src/vision_ros/src/: cam_test.cpp  client_ros.py  image_pub.cpp  marker_test.cpp  seg_ros.cpp  seg_test.cpp  testing.cpp  testingV2.cpp  vision_ros.cpp
ur_rtde/: CMakeLists.txt
ur_rtde/include/ur_rtde/: rtde_control_interface.h
ur_rtde/src/: rtde_control_interface.cpp  rtde_receive_client.cpp
