<?xml version="1.0"?>
<package>
  <name>order_system</name>
  <version>0.0.0</version>
  <description>A MES order system package</description>

  <maintainer email="haukzinn@gmail.com">Haukur Kristinsson</maintainer>
  <license>Apache 2.0</license>

  <author email="haukzinn@gmail.com">Haukur Kristinsson</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>

</package>
