<?xml version="1.0"?>
<package>
  <name>user_interface</name>
  <version>0.0.0</version>
  <description>A user interface system package</description>

  <maintainer email="haukzinn@gmail.com">Haukur Kristinsson</maintainer>
  <license>Apache 2.0</license>

  <author email="haukzinn@gmail.com">Haukur Kristinsson</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>

</package>
