<?xml version="1.0"?>
<package>
  <name>vision_ros</name>
  <version>0.0.0</version>
  <description>Vision</description>

  <maintainer email="lasse@nojgaard.dk">Lasse Nøjgaard</maintainer>
  <license>Apache 2.0</license>

  <author email="lasse@nojgaard.dk">Lasse Nøjgaard</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>OpenCV</build_depend>
  <run_depend>OpenCV</run_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>

</package>
